--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,10 @@ pypdf2
 langchain
 langchain-community
 langchain-google-genai
-dotenv
+python-dotenv
 pytest
 httpx
 pytest-asyncio
+chromadb
+langchain.text_splitters
+faiss-cpu
